--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,10 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    //Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.7.1'
+    //Gson
+    implementation 'com.google.code.gson:gson:2.8.6'
+    //Gson retrofit converter
+    implementation 'com.squareup.retrofit2:converter-gson:2.7.1'
 }
