--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
@@ -28,8 +32,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.7.1'
-    //Gson
-    implementation 'com.google.code.gson:gson:2.8.6'
     //Gson retrofit converter
     implementation 'com.squareup.retrofit2:converter-gson:2.7.1'
 }
