--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,11 @@ android {
     }
 }
 
+repositories {
+    mavenCentral()
+    google()
+}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
@@ -34,4 +39,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.7.1'
     //Gson retrofit converter
     implementation 'com.squareup.retrofit2:converter-gson:2.7.1'
+    //Picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
