--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.7.1'
     //Picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
+    //RecyclerView
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
 }
